--- a/index.html
+++ b/index.html
@@ -26,21 +26,28 @@
         <a><img class="image-logo" src="images/logo-chapeu-mario.png" alt="Logo Super Mario Bros - Letter M (uppercase)."></a>
         <nav>
             <ul class="menu">
-                <li>Home</li>
-                <li>Details</li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Details</a></li>
             </ul>
         </nav>
     </header>
 
     <main class="container">
         <div class="information">
-            <img class="image-tittle" src="images/titulo.png" alt="Text with the title: Super Mario Bros.">
-            <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi ratione est, doloribus magnam libero laboriosam harum ullam commodi fugit, excepturi facilis quisquam molestias id ea porro nam laudantium. Culpa, quaerat.</p>
+            <img class="image-title" src="images/titulo.png" alt="Text with the title: Super Mario Bros.">
+            <p class="description">Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
             <button class="button-trailer">See the Trailer</button>
         </div>
 
         <img class="image-mario" src="images/super-mario-chars.png" alt="Image Super Mario Bros and others characters.">
         
+        <div class="modal">
+            <div class="content-modal">
+                <span class="close-modal">X</span>
+                <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/Cb4WV4aXBpk" title="SUPER MARIO BROS - O FILME | Trailer Oficial (Universal Pictures) HD" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
     </main>
 
 </body>
