--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;500&display=swap" rel="stylesheet">
+
+    <script src="script.js" defer></script>
 
     <title>Super Mario Bros - The Movie</title>
 </head>
@@ -23,7 +25,7 @@
     </div>
 
     <header class="header">
-        <a><img class="image-logo" src="images/logo-chapeu-mario.png" alt="Logo Super Mario Bros - Letter M (uppercase)."></a>
+        <a href="#"><img class="image-logo" src="images/logo-chapeu-mario.png" alt="Logo Super Mario Bros - Letter M (uppercase)."></a>
         <nav>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
