--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="container">
         <div class="information">
             <img class="image-title" src="images/titulo.png" alt="Text with the title: Super Mario Bros.">
-            <p class="description">Mario é um encanador junto com seu irmão Luigi. Um dia, eles vão parar no reino dos cogumelos, governado pela Princesa Peach, mas ameaçado pelo rei dos Koopas, que faz de tudo para conseguir reinar em todos os lugares.</p>
+            <p class="description">Mario is a plumber along with his brother Luigi. One day, they end up in the Mushroom Kingdom, ruled by Princess Peach, but threatened by the King of Koopas, who does everything to reign everywhere.</p>
             <button class="button-trailer">See the Trailer</button>
         </div>
 
